# MKL-Rent

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TECHNICAL_SPECIFICATION.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  templating.py
app/audit/: events.py  models.py  router.py  service.py
app/auth/: models.py  router.py  service.py
app/backup/: router.py  scheduler.py  service.py
app/dashboard/: router.py  service.py
app/documents/: builder.py  enums.py  l10n.py  models.py  router.py
app/estimates/: models.py  router.py  schemas.py  service.py  totals.py
app/inventory/: enums.py  models.py  router.py  schemas.py
app/numbering/: models.py  service.py
app/packing/: calc.py  enums.py  models.py  router.py  schemas.py  service.py
app/projects/: availability.py  enums.py  models.py  router.py  schemas.py  service.py
app/settings/: models.py  router.py  schemas.py  service.py
app/templates/: base.html  placeholder.html
app/users/: router.py
app/utils/: images.py  security.py  timezone.py
docker/: entrypoint.sh
migrations/: README  env.py
migrations/versions/: 0001_initial.py  0002_inventory.py  0003_projects.py  0004_estimates.py  0005_packing.py  0006_documents.py  0007_audit.py  0008_optional_barcode_units.py  (+5 more)
nginx/: app-ssl.conf  app.conf  http.conf.template  tls.conf.template
scripts/: backup.py  create_user.py  make_cert.py  restore.py
tests/: conftest.py
(+64 files in other folders)
