[project]
name = "rental-inventory"
version = "0.1.0"
description = "Система учёта оборудования для AV-рентала (MVP)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "pwdlib[argon2]>=0.2",
    "pillow>=10.3",
    "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: тесты, требующие реального PostgreSQL (DATABASE_URL_TEST)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008 — Depends()/Form() в значениях по умолчанию: идиоматичный паттерн FastAPI.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["E402"]
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["migrations/", ".venv/", "tests/"]
